--- a/fxwiz-widget-player/build.gradle
+++ b/fxwiz-widget-player/build.gradle
@@ -1,13 +1,11 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 26
-
-
-
+    compileSdkVersion 25
+    buildToolsVersion '25.0.0'
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 26
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
 
@@ -28,14 +26,11 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    compile 'com.android.support:appcompat-v7:25.0.0'
 
-    implementation(name: 'AlivcReporter-1.1', ext: 'aar')
-    implementation(name: 'AlivcPlayer-3.4.3', ext: 'aar')
-    implementation(name: 'AliyunVodPlayer-3.4.3', ext: 'aar')
+    compile(name: 'AlivcReporter-1.1', ext: 'aar')
+    compile(name: 'AlivcPlayer-3.4.3', ext: 'aar')
+    compile(name: 'AliyunVodPlayer-3.4.3', ext: 'aar')
 }
