--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,10 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_knife"
+        android:name=".MyApplication"
+        android:icon="@mipmap/jpush_notification_icon"
+        android:allowBackup="false"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name="com.cross.daodaoplayer.MainActivity"
@@ -21,7 +21,6 @@
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
