添加图片选择library

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':fxwiz-widget-player', ':fxwiz-widget-jpush'
+include ':app', ':fxwiz-widget-player', ':fxwiz-widget-jpush', ':fxwiz-widget-image'
