--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
 
     implementation project(':fxwiz-widget-player')
     implementation project(':fxwiz-widget-jpush')
+    implementation project(':fxwiz-widget-image')
 }
