modify:添加utils package

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':daodao-widget-player', ':daodao-widget-jpush', ':daodao-widget-image', ':daodao-widget-gof', ':daodao-widget-mvp'
+include ':app', ':daodao-widget-player', ':daodao-widget-jpush', ':daodao-widget-image', ':daodao-widget-gof', ':daodao-widget-mvp', ':daodao-widget-utils'
