--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,9 @@ buildscript {
         google()
         jcenter()
     }
+    apply from:'gradle_script/build.gradle'
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
-        
+        classpath GRADLE_TOOLS
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -25,8 +25,10 @@ allprojects {
             dirs '../daodao-widget-player/libs'
         }
     }
+
+//    buildDir = new File(rootDir,"build")
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
+//task clean(type: Delete) {
+//    delete rootProject.buildDir
+//}
