--- a/daodao-widget-image/build.gradle
+++ b/daodao-widget-image/build.gradle
@@ -20,9 +20,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile group: 'com.github.bumptech.glide', name: 'glide', version: '3.8.0'
-    compile 'com.github.chrisbanes:PhotoView:2.1.3'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:25.0.0'
+    implementation 'com.android.support:recyclerview-v7:25.3.1'
+    implementation group: 'com.github.bumptech.glide', name: 'glide', version: '3.8.0'
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
 }
