--- a/daodao_widget_http/build.gradle
+++ b/daodao_widget_http/build.gradle
@@ -1,11 +1,13 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 28
+
+
+
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 23
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
 
@@ -24,8 +26,12 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:25.0.0'
-    implementation(name: 'AlivcReporter-1.1', ext: 'aar')
-    implementation(name: 'AlivcPlayer-3.4.3', ext: 'aar')
-    implementation(name: 'AliyunVodPlayer-3.4.3', ext: 'aar')
+
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation GRADLE_HTTP
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
 }
