--- a/daodao-widget-image/build.gradle
+++ b/daodao-widget-image/build.gradle
@@ -2,14 +2,11 @@ apply plugin: 'com.android.library'
 
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '26.0.2'
+    compileSdkVersion compile_sdk_version
 
     defaultConfig {
-        minSdkVersion 19
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion min_sdk_version
+        targetSdkVersion target_sdk_version
     }
     buildTypes {
         release {
